force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>A custom survey object to collect customer feedback</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>SURVEY-{00000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>