force-app/main/default/objects/Survey__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <formula>Booking_Form__r.Artist__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Artist</label>
    <type>Text</type>
</CustomField>