force-app/main/default/objects/Survey__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <inlineHelpText>The date of completion of this survey</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>