force-app/main/default/objects/Survey__c/fields/General_Feedback__c.field-meta.xml
<CustomField>
    <fullName>General_Feedback__c</fullName>
    <defaultValue>&quot;Het jy enige ander terugvoer, kommentaar of aanbevelinge ?&quot;</defaultValue>
    <label>General Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>