force-app/main/default/objects/Survey__c/fields/Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Score__c</fullName>
    <label>Total Score</label>
    <summarizedField>Survey_Response__c.Score_Percent__c</summarizedField>
    <summaryForeignKey>Survey_Response__c.Survey__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>