force-app/main/default/objects/Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Artist__c</columns>
    <columns>Booking_Form__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>